deploy: 4ed3b204a4fd2da2296150542718c34c8e96ae23

--- a/ch3.html
+++ b/ch3.html
@@ -166,6 +166,9 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="页面置换算法的实现"><a class="header" href="#页面置换算法的实现">页面置换算法的实现</a></h1>
+<h2 id="局部页面置换算法"><a class="header" href="#局部页面置换算法">局部页面置换算法</a></h2>
+<h3 id="fifo页面置换算法"><a class="header" href="#fifo页面置换算法">FIFO页面置换算法</a></h3>
+<p>FIFO页面置换算法实现非常简单，只需要给每一个用户程序记录一个物理页面队列即可，在用户访问申请的内存并触发缺页异常分配物理页面时将对应PPN加入队列的队尾，在需要换出物理页面时将队首的物理页面换出即可。</p>
 
                     </main>
 
