--- a/ch2.html
+++ b/ch2.html
@@ -253,7 +253,8 @@ pub fn ide_write(idx: usize, src: &amp;[u8]) -&gt; usize {
 <li>相应的物理页帧不在内存中(页表项非空，但存在标志位=0，比如在 swap 分区或磁盘文件上)；</li>
 <li>不满足访问权限(此时页表项 V 标志=1，但低权限的程序试图访问高权限的地址空间，或者有程序试图写只读页面).</li>
 </ul>
-<p>接下来介绍缺页异常处理函数<code>do_pgfault</code>的实现：</p>
+<h3 id="页异常处理函数的实现"><a class="header" href="#页异常处理函数的实现">页异常处理函数的实现</a></h3>
+<p>接下来介绍缺页异常处理函数 <code>do_pgfault</code> 的实现：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -283,8 +284,31 @@ pub fn ide_write(idx: usize, src: &amp;[u8]) -&gt; usize {
 }
 <span class="boring">}
 </span></code></pre></pre>
-<p>接下来在当前用户程序的<code>memory_set</code>的<code>areas</code>中查看是否包含触发异常的<code>vpn</code>，若不包含则说明该用户程序访问了一个无效的虚拟地址，直接返回错误即可，若包含则说明该用户程序申请了包含该虚拟地址的内存，但内核还未为其分配物理页面，或分配后已经被交换到磁盘中暂时失效了。</p>
-<p>此前，当用户在<code>memory_set</code>中申请一段内存时，若可以先不分配则不分配，只将其记录到<code>areas</code>当中：</p>
+<p>然后分为两个部分，局部页面置换算法和全局页面置换算法：</p>
+<pre><pre class="playground"><code class="language-rust">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>if PRA_IS_LOCAL {
+    local_pra(memory_set, vpn, token)
+}
+else {
+    global_pra(memory_set, vpn, token)
+}
+<span class="boring">}
+</span></code></pre></pre>
+<h3 id="局部页面置换部分的处理"><a class="header" href="#局部页面置换部分的处理">局部页面置换部分的处理</a></h3>
+<p>在局部页面置换算法的处理中，接下来在当前用户程序的 <code>memory_set</code> 的 <code>areas</code> 中查看是否包含触发异常的 <code>vpn</code> ，若不包含则说明该用户程序访问了一个无效的虚拟地址，直接返回错误即可，若包含则说明该用户程序申请了包含该虚拟地址的内存，但内核还未为其分配物理页面，或分配后已经被交换到磁盘中暂时失效了。</p>
+<pre><pre class="playground"><code class="language-rust">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>for i in 0..memory_set.areas.len() {
+    if vpn &gt;= memory_set.areas[i].vpn_range.get_start() &amp;&amp; vpn &lt; memory_set.areas[i].vpn_range.get_end() {
+        ...
+    }
+}
+<span class="boring">}
+</span></code></pre></pre>
+<p>此前，当用户在 <code>memory_set</code> 中申请一段内存时，若可以先不分配则不分配，只将其记录到 <code>areas</code> 当中：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -298,7 +322,7 @@ fn push(&amp;mut self, mut map_area: MapArea, data: Option&lt;&amp;[u8]&gt;) {
 }
 <span class="boring">}
 </span></code></pre></pre>
-<p>回到缺页异常的处理，若触发异常的<code>vpn</code>包含在<code>memory_set</code>的<code>areas</code>中，则说明内核还未为其分配物理页面，或分配后已经被交换到磁盘中暂时失效了，不管怎样我们都需要分配一个物理页面给他使用，此时需要查看物理页面是否足够：</p>
+<p>回到缺页异常的处理，若触发异常的 <code>vpn</code> 包含在 <code>memory_set</code> 的 <code>areas</code> 中，则说明内核还未为其分配物理页面，或分配后已经被交换到磁盘中暂时失效了，不管怎样我们都需要分配一个物理页面给他使用，此时需要查看物理页面是否足够：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -308,7 +332,7 @@ fn push(&amp;mut self, mut map_area: MapArea, data: Option&lt;&amp;[u8]&gt;) {
     println!(&quot;[kernel] PAGE FAULT: Frame enough, allocating ppn:{} frame.&quot;, ppn.0);
 }
 else {  // frame not enough, need to swap out a frame
-    ppn = memory_set.frame_que.pop().unwrap();
+    ppn = memory_set.get_next_frame().unwrap();
     let data_old = ppn.get_bytes_array();
     let mut p2v_map = P2V_MAP.exclusive_access();
     let vpn_old = *(p2v_map.get(&amp;ppn).unwrap());
@@ -319,14 +343,14 @@ else {  // frame not enough, need to swap out a frame
         }
     }
     p2v_map.remove(&amp;ppn);
-    println!(&quot;[kernel] PAGE FAULT: Frame not enough, swapping out ppn:{} frame.&quot;, ppn.0);
+    println!(&quot;[kernel] PAGE FAULT: (local) Frame not enough, swapping out ppn:{} frame.&quot;, ppn.0);
 
     let frame = frame_alloc().unwrap();
     memory_set.areas[i].data_frames.insert(vpn, frame);
 }
 <span class="boring">}
 </span></code></pre></pre>
-<p>主要考虑物理页面不足需要换出的情况，<code>ppn = memory_set.frame_que.pop().unwrap()</code>获得要换出的物理页面对应的PPN，根据不同算法这里获得的页面不同，然后将该页面的数据复制到磁盘中，并且将其从页表中删除，最后再将该物理页面分配给触发异常的虚拟地址。</p>
+<p>物理页面足够时直接分配，主要考虑物理页面不足需要换出的情况，<code>ppn = memory_set.get_next_frame().unwrap()</code> 获得要换出的物理页面对应的PPN，根据不同算法这里获得的页面不同，然后将该页面的数据复制到磁盘中，并且将其从页表中删除，最后再将该物理页面分配给触发异常的虚拟地址。</p>
 <p>如果该虚拟地址之前被分配过物理页面并被换出，我们需要将原来的数据拿出来放到新分配的物理页面中：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
@@ -334,7 +358,7 @@ else {  // frame not enough, need to swap out a frame
 </span>if ide_manager.check(token, vpn) {
     let data = ppn.get_bytes_array();
     ide_manager.swap_out(token, vpn, data);
-    println!(&quot;[kernel] PAGE FAULT: Swapping in vpn:{} ppn:{} frame.&quot;, vpn.0, ppn.0);
+    println!(&quot;[kernel] PAGE FAULT: (local) Swapping in vpn:{} ppn:{} frame.&quot;, vpn.0, ppn.0);
 }
 <span class="boring">}
 </span></code></pre></pre>
@@ -343,7 +367,7 @@ else {  // frame not enough, need to swap out a frame
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>if !frame_check() {
-    let ppn = memory_set.frame_que.pop().unwrap();
+    let ppn = memory_set.get_next_frame().unwrap();
     let data_old = ppn.get_bytes_array();
     let mut p2v_map = P2V_MAP.exclusive_access();
     let vpn_old = *(p2v_map.get(&amp;ppn).unwrap());
@@ -354,15 +378,58 @@ else {  // frame not enough, need to swap out a frame
         }
     }
     p2v_map.remove(&amp;ppn);
-    println!(&quot;[kernel] PAGE FAULT: Swapping out ppn:{} frame.&quot;, ppn.0);
+    println!(&quot;[kernel] PAGE FAULT: (local) Swapping out ppn:{} frame.&quot;, ppn.0);
 }
-println!(&quot;[kernel] PAGE FAULT: Mapping vpn:{} to ppn:{}.&quot;, vpn.0, ppn.0);
+println!(&quot;[kernel] PAGE FAULT: (local) Mapping vpn:{} to ppn:{}.&quot;, vpn.0, ppn.0);
 memory_set.page_table.map(vpn, ppn, memory_set.areas[i].get_flag_bits());
 P2V_MAP.exclusive_access().insert(ppn, vpn);
-memory_set.frame_que.push(ppn);
+memory_set.insert_frame(ppn);
 <span class="boring">}
 </span></code></pre></pre>
 <p>由于建立映射时页表可能需要新的物理页面，所以我们先检查一下物理页面是否还有剩余，若没有则提前换出一个，保证页表可以正常工作。</p>
+<h3 id="全局页面置换部分的处理"><a class="header" href="#全局页面置换部分的处理">全局页面置换部分的处理</a></h3>
+<p>一开始和局部页面置换部分的处理相同，先在当前用户程序的 <code>memory_set</code> 的 <code>areas</code> 中查看是否包含触发异常的 <code>vpn</code> ，若包含则进行进一步处理。</p>
+<pre><pre class="playground"><code class="language-rust">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>for i in 0..memory_set.areas.len() {
+    if vpn &gt;= memory_set.areas[i].vpn_range.get_start() &amp;&amp; vpn &lt; memory_set.areas[i].vpn_range.get_end() {
+        ...
+    }
+}
+<span class="boring">}
+</span></code></pre></pre>
+<p>首先进行全局页面置换算法的预处理，两个页面置换算法的处理是不同的，在下一章中会详细讲解，如下：</p>
+<pre><pre class="playground"><code class="language-rust">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>GFM.exclusive_access().work(memory_set, token);
+<span class="boring">}
+</span></code></pre></pre>
+<p>由于是全局页面置换算法，参数设置合理的情况下，这时保证一定有空余的物理页面，直接分配即可。同样地，如果该虚拟地址之前被分配过物理页面并被换出，我们需要将原来的数据拿出来放到新分配的物理页面中：</p>
+<pre><pre class="playground"><code class="language-rust">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>let frame = frame_alloc().unwrap();
+ppn = frame.ppn;
+memory_set.areas[i].data_frames.insert(vpn, frame);
+
+if IDE_MANAGER.exclusive_access().check(token, vpn) {
+    let data = ppn.get_bytes_array();
+    IDE_MANAGER.exclusive_access().swap_out(token, vpn, data);
+    println!(&quot;[kernel] PAGE FAULT: (global) Swapping in vpn:{} ppn:{} frame.&quot;, vpn.0, ppn.0);
+}
+<span class="boring">}
+</span></code></pre></pre>
+<p>同样地，最后建立新的映射：</p>
+<pre><pre class="playground"><code class="language-rust">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>memory_set.page_table.map(vpn, ppn, memory_set.areas[i].get_flag_bits());
+P2V_MAP.exclusive_access().insert(ppn, vpn);
+memory_set.insert_frame(ppn);
+<span class="boring">}
+</span></code></pre></pre>
 <p>到这里缺页异常就处理完毕了，中断返回后重新执行该指令时可以正常执行。</p>
 
                     </main>
